# kontainer

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Kontainer  Messages.sh  PKGBUILD  README.md  REUSE.toml  TODO.md  color_map.txt  kontainer  kontainer-flatpak.desktop  kontainer.desktop  kontainer.flatpak.yaml  org.kde.Kontainer.desktop  org.kde.kontainer.desktop  recolor_svgs.sh  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Kontainer_autogen/: deps
Kontainer_autogen/6YEA5652QU/: moc_appsdialog.cpp  moc_appsdialog.cpp.d  moc_backend.cpp  moc_backend.cpp.d  moc_createcontainerdialog.cpp  moc_createcontainerdialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
include/: appflags.h  appsdialog.h  backend.h  createcontainerdialog.h  main.h  mainwindow.h  packagemanager.h  terminalutils.h  toolboximages.h
kontainer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
kontainer_autogen/6YEA5652QU/: moc_appsdialog.cpp  moc_appsdialog.cpp.d  moc_backend.cpp  moc_backend.cpp.d  moc_createcontainerdialog.cpp  moc_createcontainerdialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
my-local-repo/: summary  summary.idx
my-local-repo/refs/heads/app/org.kde.Kontainer/x86_64/: master
my-local-repo/refs/heads/runtime/org.kde.Kontainer.Debug/x86_64/: master
my-local-repo/summaries/: 51369a7e94c5dc26fd2c41e9d8fafe13b2e0338bd36f0776ee14840f4e4f77ad-d50de5b5663da511c846578499ff08f00ef41063d31ef751fb1959e1aca18398.delta  e8f415d0d1a83da27ef921b151122f1ecf6b012826b2ab5469298b4031fad9b3-d50de5b5663da511c846578499ff08f00ef41063d31ef751fb1959e1aca18398.delta  ff1fd6cd6de2ae71b656ac62ae5a38916198ef76c25f30fb7221e3d726a4611f-d50de5b5663da511c846578499ff08f00ef41063d31ef751fb1959e1aca18398.delta
po/ca/: kontainer.po
po/ca@valencia/: kontainer.po
po/he/: kontainer.po
po/sl/: kontainer.po
po/tr/: kontainer.po
po/uk/: kontainer.po
res/: README.md  resources.qrc
res/permissions/alpine/: README.md  emaillist.txt
res/permissions/debian/: README.md
res/permissions/kde-neon/: README.md
res/permissions/tux/: README.md
res/permissions/ublue/: README.md
res/trademarks/archlinux/: Email.txt  README.md
res/trademarks/blackarch/: README.md
res/trademarks/centos/: README.md
res/trademarks/clearlinux/: README.md
res/trademarks/crystal/: README.md
res/trademarks/debian/: README.md
res/trademarks/distrobox/: README.md
res/trademarks/elementary/: README.md
res/trademarks/fedora/: README.md
res/trademarks/fedora-coreos/: README.md
res/trademarks/gentoo/: README.md
res/trademarks/kali-linux/: README.md
res/trademarks/linuxmint/: README.md
res/trademarks/mageia/: README.md
res/trademarks/opensuse/: README.md
res/trademarks/toolbx/: REAME.md
res/trademarks/tux/: README.md
res/trademarks/ubuntu/: README.md
res/trademarks/vanilla/: README.md
src/: appsdialog.cpp  backend.cpp  backend.py  backend_mock.py  createcontainerdialog.cpp  distrobox_backend.py  distrobox_backend_mock.py  main.cpp  main.py  mainwindow.cpp
src/ui/: dialogs.py  main_window.py
translate/: kontainer.pot
translate/de/LC_MESSAGES/: kontainer.po
